remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -381,14 +381,14 @@
                 "description": "Project Nomination Form Closes",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-26",
                 "description": "Form online to accept Attendee registrations (wuFoo)",
                 "owner": "Mike",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-28",
@@ -409,7 +409,7 @@
                 "description": "Arrival Day",
                 "owner": "No Owner",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-02-27",
