remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -438,7 +438,7 @@
                 "description": "SnowFROC, Denver",
                 "owner": "No Owner",
                 "project_name": "OWASP SnowFROC",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-05-05",
