remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -431,7 +431,7 @@
                 "description": "Confirm attendance. If over 500 please notify Dawn to update Insurance Policy",
                 "owner": "Emily",
                 "project_name": "OWASP SnowFROC",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-05",
